fintrans-influx-ingest Helm Chart

--- a/charts/fintrans-influx-ingest/templates/fintrans-influx-ingest/deployment.yaml
+++ b/charts/fintrans-influx-ingest/templates/fintrans-influx-ingest/deployment.yaml
@@ -23,5 +23,8 @@ spec:
         - {{ template "kafka-address" . }}
         command:
         - app
+        env:
+        - name: INFLUX_API
+          value: {{ template "influxdb-address" . }}
         resources:
 {{ toYaml .Values.resources | indent 12 }}
