fix in name of image

--- a/charts/fintrans-laundering-detector/values.yaml
+++ b/charts/fintrans-laundering-detector/values.yaml
@@ -3,7 +3,7 @@
 # Declare variables to be passed into your templates.
 image:
   repository: pupapaik/
-  name: fintrans-generator
+  name: fintrans-laundering-detector
   tag: latest
   pullPolicy: IfNotPresent
 
