fix influxdb endpoint

--- a/scenarios/multi-node/configs/fintrans-influx-ingest.yaml
+++ b/scenarios/multi-node/configs/fintrans-influx-ingest.yaml
@@ -5,5 +5,5 @@ kafka:
 
 influxdb:
   deployChart: false
-  externalAddress: "http://influxdb-${TS_INFLUXDB_RELEASE}:8087"
+  externalAddress: "http://influx-${TS_INFLUXDB_RELEASE}:8087"
 
